--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "react-dom": ">=16.8.0"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "lucide-react": "^0.511.0"
   },
   "engines": {
