Packages Outdation Issue REsolution | Voice Type Rendering | Merge Repo Issues | Readme Updates Issues resolved | package name update + tags renewal

--- a/package.json
+++ b/package.json
@@ -45,7 +45,9 @@
     "voice-enabled-ui",
     "speech-interface",
     "voice-powered",
-    "conversational-interface"
+    "conversational-interface",
+    "realtime-voice-ai",
+    "realtime voice chatbot"
   ],
   "author": {
     "name": "Muhammad Huzaifa",
